tests/spec/emit/snapshots/type_switch_four_guarded_arms_same_type.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nimport \"go:example.com/events\"\n\nfn handle(e: events.Event) -> int {\n  match e {\n    events.Click { x } if x > 1000 => 4,\n    events.Click { x } if x > 100 => 3,\n    events.Click { x } if x > 50 => 2,\n    events.Click { x } if x > 0 => 1,\n    _ => 0,\n  }\n}\n"
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		x := e.X
		if x > 1000 {
			return 4
		} else {
			x_1 := e.X
			if x_1 > 100 {
				return 3
			} else {
				x := e.X
				if x > 50 {
					return 2
				}
				x_2 := e.X
				if x_2 > 0 {
					return 1
				}
				return 0
			}
		}
	default:
		return 0
	}
}
